remove polling
Nostr-Signature: 40f01e84f96661bb7fea13aa63c7da428118061b0a1470a11890d4f9cd6d685b 573634b648634cbad10f2451776089ea21090d9407f715e83c577b4611ae6edc dbb6947defac6c7f92a3cf6f72352a94ffe2c4b33e65f8410518a40406c93f1f5a3e13e81f2f04f676d826e6cf03ec802328f5228300f80a8114fa3fd26eaeff
